my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EEARG/EEARG.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EEARG.dml:9:1: error EEARG: cannot use endian integer as argument type in declaration
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EEARG.dml:15:8: error EEARG: cannot use endian integer as argument type in declaration
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EEARG.dml:21:1: error EEARG: cannot use endian integer as argument type in declaration
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EEARG.dml:6:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EEARG.dml:12:1: error EEARG: cannot use endian integer as argument type in declaration
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EEARG.dml:18:1: error EEARG: cannot use endian integer as argument type in declaration
